AC_INIT
if test "x$LIBROOT" = "x" ; then
        export LIBROOT=$HOME
fi
echo "use LIBROOT=$LIBROOT"

AC_CONFIG_SRCDIR([configure.in])

AC_PREFIX_DEFAULT(${HOME}/local)
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(shared, 0.1)

AC_LANG_C
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_CC
#Не создавать Shared библиотеки
#AC_DISABLE_SHARED
# Цитата (quoting):
# This macro adds many new tests to the configure script 
# so that the generated libtool script will understand 
# the characteristics of the host
#AC_PROG_LIBTOOL
AC_PROG_RANLIB
#LT_INIT

#check for oracle
MRJ_CHECK_ORACLE
AX_BOOST_BASE(1.31, , AC_MSG_ERROR([Need boost!]))
CHECK_TCL
MRJ_CHECK_SERVERLIB
PKG_CHECK_MODULES([ICU], [icu-i18n >= 57], , AC_MSG_ERROR([Need icu57!]))

AC_SUBST(COMMON_CXXFLAGS, [`${SERVERLIB_PATH}/dependlibs-config --cxxflags`])
AC_SUBST(COMMON_CFLAGS, [`${SERVERLIB_PATH}/dependlibs-config --cflags`])
CXXFLAGS="$CXXFLAGS $COMMON_CXXFLAGS $ICU_INCLUDE_PATH"
CFLAGS="$CFLAGS $COMMON_CFLAGS $ICU_INCLUDE_PATH"

#Какие Makefileы создавать
AC_CONFIG_FILES([sharedconfig Makefile src/Makefile sql/Makefile])
AC_OUTPUT
