CFLAGS = @AXIS2C_CFLAGS@
lib_LIBRARIES = libazimut_loyalty.a
libazimut_loyalty_a_SOURCES = adb_AvailableMilesRequest.c adb_AvailableMilesResponse.c adb_BonusRequest.c\
		adb_BonusResponse.c adb_cancelReserve.c adb_CancelReserveRequest.c\
		adb_CancelReserveResponse.c adb_cancelReserveResponseE2.c adb_ClassMilesCost.c\
		adb_ClassMilesIncome.c adb_ErrorGroup.c adb_ErrorGroupResponse.c\
		adb_getAvailableMiles.c adb_getAvailableMilesResponse.c adb_getBonus.c\
		adb_getBonusResponse.c adb_getPrice.c adb_getPriceResponse.c\
		adb_getReserveStatus.c adb_getReserveStatusResponse.c adb_login.c\
		adb_LoginRequest.c adb_LoginResponse.c adb_loginResponseE3.c\
		adb_payMiles.c adb_PayMilesRequest.c adb_PayMilesResponse.c\
		adb_payMilesResponseE1.c adb_PriceRequest.c adb_PriceResponse.c\
		adb_reserveMiles.c adb_ReserveMilesRequest.c adb_ReserveMilesResponse.c\
		adb_reserveMilesResponseE0.c adb_ReserveStatusRequest.c adb_ReserveStatusResponse.c\
		axis2_extension_mapper.c axis2_skel_FFPServer.c axis2_svc_skel_FFPServer.c

noinst_HEADERS = adb_AvailableMilesRequest.h adb_AvailableMilesResponse.h adb_BonusRequest.h\
		 adb_BonusResponse.h adb_cancelReserve.h adb_CancelReserveRequest.h\
		 adb_cancelReserveResponseE2.h adb_CancelReserveResponse.h adb_ClassMilesCost.h\
		 adb_ClassMilesIncome.h adb_ErrorGroup.h adb_ErrorGroupResponse.h\
		 adb_getAvailableMiles.h adb_getAvailableMilesResponse.h adb_getBonus.h\
		 adb_getBonusResponse.h adb_getPrice.h adb_getPriceResponse.h\
		 adb_getReserveStatus.h adb_getReserveStatusResponse.h adb_login.h\
		 adb_LoginRequest.h adb_loginResponseE3.h adb_LoginResponse.h\
		 adb_payMiles.h adb_PayMilesRequest.h adb_payMilesResponseE1.h\
		 adb_PayMilesResponse.h adb_PriceRequest.h adb_PriceResponse.h\
		 adb_reserveMiles.h adb_ReserveMilesRequest.h adb_reserveMilesResponseE0.h\
		 adb_ReserveMilesResponse.h adb_ReserveStatusRequest.h adb_ReserveStatusResponse.h\
		 axis2_extension_mapper.h axis2_skel_FFPServer.h
