#include $(TCLMON_PATH)/tclconfig

AM_CPPFLAGS = -I$(top_srcdir)/src $(all_includes) $(TCLINCLUDE)
METASOURCES = AUTO
lib_LIBRARIES = libstat.a
libstat_a_SOURCES = \
  common.cc \
  ad.cc \
  annul_bt.cc \
  bi.cc \
  common.cc \
  fv.cc \
  ha.cc \
  main.cc \
  reprint.cc \
  unacc.cc \
  utils.cc \
  rem.cc \
  services.cc \
  vo.cc
        

noinst_HEADERS = \
  common.h \
  ad.h \
  annul_bt.h \
  bi.h \
  common.h \
  fv.h \
  ha.h \
  main.h \
  reprint.h \
  unacc.h \
  utils.h \
  rem.h \
  services.h \
  vo.h
