#include $(TCLMON_PATH)/tclconfig

AM_CPPFLAGS = -I$(top_srcdir)/src $(all_includes) $(TCLINCLUDE)
METASOURCES = AUTO
lib_LIBRARIES = libstat.a
libstat_a_SOURCES = \
  stat_common.cc \
  stat_ad.cc \
  stat_annul_bt.cc \
  stat_bi.cc \
  stat_common.cc \
  stat_fv.cc \
  stat_ha.cc \
  stat_main.cc \
  stat_reprint.cc \
  stat_unacc.cc \
  stat_utils.cc \
  stat_rem.cc \
  stat_services.cc \
  stat_rfisc.cc \
  stat_vo.cc
        

noinst_HEADERS = \
  stat_common.h \
  stat_ad.h \
  stat_annul_bt.h \
  stat_bi.h \
  stat_common.h \
  stat_fv.h \
  stat_ha.h \
  stat_main.h \
  stat_reprint.h \
  stat_unacc.h \
  stat_utils.h \
  stat_rem.h \
  stat_services.h \
  stat_rfisc.h \
  stat_vo.h
